新增加自动轮播的gallery效果的banner

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         <activity android:name=".recyclerbanner.RecyclerBannerActivity"></activity>
         <activity android:name=".vpbanner1.VpBanner1Activity"></activity>
         <activity android:name=".vpbanner2.VpBanner2Activity"></activity>
+        <activity android:name=".vpbanner3.VpBanner3Activity"></activity>
     </application>
 
 </manifest>
